# spotify-rpi-clock

./: Pipfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/flutterdev/: devcontainer.json
.devcontainer/rustdev/: Dockerfile  devcontainer.json
.github/workflows/: build-deploy.yml
app/backend/db/: db_main.py  spotify-rpi-clock_db.db
app/core/: openapi.yaml
app/db/: models.py  session.py
app/frontend/spotify_clock/: README.md  pubspec.yaml
app/spotify_clock/: pubspec.yaml
app/spotify_clock/lib/: main.dart  style_scheme.dart
app/spotify_clock/linux/: my_application.cc
app/spotify_clock/web/: index.html  manifest.json
device/: .gitignore  spotify-clock-client.service
device/pcb/: fp-info-cache  fp-lib-table  spotify-clock-eagle-import.kicad_sym  spotify-clock.kicad_pcb  spotify-clock.kicad_prl  spotify-clock.kicad_pro  spotify-clock.kicad_sch  sym-lib-table
device/pcb/spotify-clock.pretty/: 0805-NO.kicad_mod  1X03_ROUND_76.kicad_mod  1X25_ROUND_70MIL.kicad_mod  BONNET_SPEAKER_REVB.kicad_mod  FIDUCIAL_1MM.kicad_mod  JSTPH4.kicad_mod  MMSS8050_SOT23.kicad_mod  PCBFEAT-REV-040.kicad_mod  PI_BONNET_THMSMT.kicad_mod  QFN16_3MM.kicad_mod  SOLDERJUMPER_2WAY_OPEN_NOPASTE.kicad_mod  (+1 more)
device/spotify-clock-client/: Cargo.toml  Cross.toml
device/spotify-clock-client/cross-compile/: Dockerfile.raspi-3B-armv7  Dockerfile.raspi-zeroW-armhf
device/spotify-clock-client/src/: controller.rs  hw_interface.rs  keyboard.rs  main.rs  peripherals.rs  player_event_handler.rs  spotify.rs  spotify_client.rs
docs/: db_model.mwb  requirements.md
(+57 files in other folders)
