[package]
name = "spotify-clock-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = { version = "0.4.2", default-features = false, features = ["alsa-backend"] }
hex = "0.4.3"
sha-1 = "0.9"
log = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "process"] }
futures-util = { version = "0.3", default_features = false }
rppal = "0.14.1"